--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <footer class="footer bg-dark text-white py-3">
         &copy; 2025 Thanh Truong Doan - Portfolio | Designed for Assignment
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
