--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
             height: 100vh;
             overflow: hidden;
             color: white;
+            overflow-y: scroll; 
         }
 
         .background {
@@ -135,6 +136,8 @@
     <footer class="footer bg-dark text-white py-3">
         &copy; 2025 Thanh Truong Doan - Portfolio | Designed for Assignment
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
