--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
             padding: 0;
             color: white;
             overflow-x: hidden;
+            overflow-y: scroll; 
         }
 
         .background {
@@ -191,6 +192,9 @@
     <footer class="footer bg-dark text-white py-3">
         &copy; 2025 Thanh Truong Doan - Portfolio | Designed for Assignment
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 </html>
