--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment Portfolio - Resume</title>
+    <title>Assignment Portfolio - Skills</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -12,7 +12,6 @@
             padding: 0;
             color: white;
             overflow-y: scroll; 
-            font-family: Arial, sans-serif;
         }
 
         .background {
@@ -20,6 +19,7 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(-45deg, #2c3e50, #16a085, #8e44ad, #00b894, #fd79a8);
+
             background-size: 300% 300%;
             animation: gradientMove 10s infinite alternate;
             z-index: -1;
@@ -39,47 +39,38 @@
 
         .content {
             position: relative;
+            z-index: 2;
+            padding: 50px 0;
+        }
+
+        .skills-container {
+            display: flex;
+            justify-content: center;
+            gap: 50px;
+            text-align: left;
+        }
+
+        .skills-section {
+            width: 45%;
+            background: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9); 
-            color: #333;
-            border-radius: 10px; 
-            margin: 20px;
-            text-align: left; 
-            max-width: 900px; 
-            margin-left: auto;
-            margin-right: auto;
+            border-radius: 10px;
         }
 
-        .navbar {
-            z-index: 10;
+        .skills-section img {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+            padding: 5px 0 5px 0;
         }
 
-        .footer {
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-        }
-
-        .container {
-            padding-top: 50px;
-        }
-
-        .heading {
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
-
-        ul {
-            list-style-type: disc;
-            padding-left: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
+        .portfolio-gif {
+            position: absolute;
+            top: 60px;
+            left: 10px;
+            width: 120px; 
+            height: auto;
+            z-index: 1;
         }
     </style>
 </head>
@@ -87,7 +78,9 @@
 
     <div class="background"></div>
     <div class="overlay"></div>
-    
+
+    <img src="images/coding.gif" alt="Portfolio GIF" class="portfolio-gif">
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Thanh Truong Doan - Portfolio</a>
@@ -107,61 +100,66 @@
         </div>
     </nav>
 
-    <div class="content">
-        <div class="container">
-            <h2 class="heading">Resume</h2>
-            <a href="resume.pdf" download class="btn btn-primary">Download Resume (PDF)</a>
-            <p><strong>Name:</strong> Thanh Truong Doan</p>
-            <p><strong>Location:</strong> Hamilton, ON</p>
-            <p><strong>Contact:</strong> thanh-truong.doan@mohawkcollege.ca | 289-987-1234</p>
-
-            <h3>Highlights of Qualifications</h3>
-            <ul>
-                <li><strong>Extensive Experience:</strong> Over 10 years as a slot technician, including 4 years as a senior technician, developing a methodical approach to complex technical challenges and hands-on troubleshooting.</li>
-                <li><strong>Technical Expertise:</strong> Proficient in diagnosing issues, performing repairs, and managing system upgrades, showcasing skills transferable to debugging and maintaining software systems.</li>
-                <li><strong>Regulatory Compliance:</strong> Experienced in coordinating installations and upgrades with strict adherence to detailed policies, mirroring the precision needed in software documentation and coding standards.</li>
-                <li><strong>Project Leadership:</strong> Successfully led technical teams, planning and executing projects, demonstrating organizational and problem-solving skills valuable in software development.</li>
-                <li><strong>Collaboration and Communication:</strong> Strong team leadership and collaboration abilities, ensuring seamless coordination and knowledge sharing—essential for development teams.</li>
-                <li><strong>Bilingual Proficiency:</strong> Fluent in English and Vietnamese, enabling effective communication with diverse teams and stakeholders.</li>
-            </ul>
-
-            <h3>Technical Skills</h3>
-            <ul>
-                <li><strong>Programming Languages:</strong> Python, Java, C#</li>
-                <li><strong>Web Development:</strong> HTML, CSS, JavaScript, PHP, WordPress, ASP.NET, React</li>
-                <li><strong>Database Architecture:</strong> MySQL</li>
-                <li><strong>Tool:</strong> Git, GitHub</li>
-                <li><strong>Slot Machine Operations and Compliance:</strong> Expertise in troubleshooting, repairing, testing, and maintaining slot machines, including moves, upgrades and installations of hardware and software, and ensuring compliance with policies, security protocols, and safety standards.</li>
-            </ul>
-
-            <h3>Work Experience</h3>
-            <p><strong>Slot Technician</strong> - Great Canadian Entertainment, Toronto</p>
-            <ul>
-                <li>Responsible for the maintenance, repair, and installation of slot machines, ensuring proper functionality and compliance with safety and security policies.</li>
-                <li>Maintain a high level of knowledge on various slot machines and promote excellent customer service and integrity.</li>
-                <li>Comply with safety procedures, use required safety equipment and identify and report unsafe practices or conditions.</li>
-            </ul>
-
-            <p><strong>Senior Slot Technician</strong> - Great Canadian Entertainment, Toronto</p>
-            <ul>
-                <li>Slot Operations Management: Coordinate slot moves, upgrades, and installations with vendors and regulatory agencies; ensure adherence to Internal Control Manual policies.</li>
-                <li>Maintain a clean, safe work environment, follow safety protocols, and ensure compliance with security and company asset policies.</li>
-                <li>Leadership & Project Management: Lead projects related to slot machines as a senior technician.</li>
-            </ul>
-
-            <h3>Education</h3>
-            <p><strong>Mohawk College</strong> - Software Development (Sep 2023 - Present)</p>
-            <ul>
-                <li>Current 4th semester Software Development student with an Overall grade of 94%</li>
-                <li>Dean's Honours in the last 3 semesters.</li>
-            </ul>
-            <p><strong>Mohawk College</strong> - Diploma of Accounting (Jan 2009 - May 2010)</p>
+    <div class="content container">
+        <h2 class="text-center mb-4">Skills</h2>
+        <div class="skills-container">
+            <div class="skills-section">
+                <h3>Technical Skills</h3>
+                <ul>
+                    <li><strong>Programming Languages:</strong> 
+                        <ul>
+                            <li><img src="images/python.png" alt="Python" style="width:30px; height:30px;"> Python</li>
+                            <li><img src="images/java.png" alt="Java" style="width:30px; height:30px;"> Java</li>
+                            <li><img src="images/csharp.png" alt="C#" style="width:30px; height:30px;"> C#</li>
+                        </ul>
+                    </li>
+                    <li><strong>Web Development:</strong> 
+                        <ul>
+                            <li><img src="images/html.png" alt="HTML" style="width:30px; height:30px;"> HTML</li>
+                            <li><img src="images/css.png" alt="CSS" style="width:30px; height:30px;"> CSS</li>
+                            <li><img src="images/javascript.png" alt="JavaScript" style="width:30px; height:30px;"> JavaScript</li>
+                            <li><img src="images/php.png" alt="PHP" style="width:30px; height:30px;"> PHP</li>
+                            <li><img src="images/wordpress.png" alt="WordPress" style="width:30px; height:30px;"> WordPress</li>
+                            <li><img src="images/aspnet.png" alt="ASP.NET" style="width:30px; height:30px;"> ASP.NET</li>
+                        </ul>
+                    </li>
+                    <li><strong>Database Architecture:</strong> 
+                        <ul>
+                            <li><img src="images/mysql.png" alt="Database" style="width:30px; height:30px;"> MySQL</li> 
+                        </ul>
+                    </li>
+                    <li><strong>Tool:</strong> 
+                        <ul>
+                            <li><img src="images/git.png" alt="Git" style="width:30px; height:30px;"> Git</li>
+                            <li><img src="images/github.png" alt="Git" style="width:30px; height:30px;">GitHub</li>
+                        </ul>
+                    </li>
+                    <li><strong>Slot Machine Operations and Compliance:</strong> 
+                        <ul>
+                            <li>Expertise in troubleshooting, repairing, testing, and maintaining slot machines.</li> 
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="skills-section">
+                <h3>Soft Skills</h3>
+                <ul>
+                    <li>Problem-Solving</li>
+                    <li>Attention to Detail</li>
+                    <li>Communication</li>
+                    <li>Teamwork</li>
+                    <li>Adaptability</li>
+                    <li>Time Management</li>
+                </ul>
+            </div>
         </div>
     </div>
 
-    <footer class="footer bg-dark text-white py-3">
+    <footer class="footer bg-dark text-white text-center py-3">
         &copy; 2025 Thanh Truong Doan - Portfolio | Designed for Assignment
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
