--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             color: white;
+            overflow-y: scroll; 
         }
 
         .background {
@@ -157,6 +158,8 @@
     <footer class="footer bg-dark text-white text-center py-3">
         &copy; 2025 Thanh Truong Doan - Portfolio | Designed for Assignment
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
